--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href = "https://lohrindere.github.io/portac/" target="_blank"><div class="bg-image1"></div></a>
   <a href = ""><div class="bg-image2"></div></a>
   <a href = ""><div class="bg-image3"></div></a>
-  <audio src="https://puu.sh/HhSza/a18af7f462.mp3" autoplay loop id = egornesmotru>
+  <audio src="https://puu.sh/I6l6b/33670e70d9.mp3" autoplay loop id = egornesmotru>
   </audio>
   <script>
     var downaudio = document.getElementById("egornesmotru");
