--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://puu.sh/HhSBP/5fdb38e99c.png">
     <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">
-    <title>𝕤𝕖𝕝𝕖𝕔𝕥𝕠𝕣</title>
+    <title>3ТО DРYГО3!</title>
   </head>
   <body>
-  <a href = "https://lohrindere.github.io/portac/" target="_blank"><div class="bg-image1"></div></a>
+  <a href = "" target="_blank"><div class="bg-image1"></div></a>
   <a href = ""><div class="bg-image2"></div></a>
   <a href = ""><div class="bg-image3"></div></a>
-  <audio src="https://puu.sh/I6l6b/33670e70d9.mp3" autoplay loop id = egornesmotru>
+  <a href = ""><div class="bg-image4"></div></a>
+  <a href = ""><div class="bg-image5"></div></a>
+  <audio src="https://puu.sh/I8VSp/c8f833e7df.mp3" autoplay loop id = egornesmotru>
   </audio>
   <script>
     var downaudio = document.getElementById("egornesmotru");
